<?xml version="1.0" encoding="utf-8"?>
    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".DetalheToDo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:paddingStart="20dp"
        android:paddingTop="20dp">

        <!-- Conteúdo -->
        <TextView
            android:id="@+id/lbl_conteudo"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/lbl_conteudo"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/vlr_conteudo"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vlr_conteudo"
            android:textSize="20dp"
        />

        <!-- Prioridade -->
        <TextView
            android:id="@+id/lbl_prioridade"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/lbl_prioridade"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/vlr_prioridade"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vlr_prioridade"
            android:textSize="20dp"
            />

        <!-- Notificar -->
        <TextView
            android:id="@+id/lbl_notificar"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/lbl_notificar"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/vlr_notificar"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vlr_notificar"
            android:textSize="20dp"
            />

        <!-- Categoria -->
        <TextView
            android:id="@+id/lbl_categoria"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_categoria"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/vlr_categoria"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vlr_categoria"
            android:textSize="20dp"
            />

    </GridLayout>